objects/kugo2p__VATRate__c.object
<CustomObject>
    <description>Kugamon - Related object to VAT/GST to store rate information. For Admin use only.</description>
    <fields>
        <fullName>kugo2p__DateEffective__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Effective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateExpire__c</fullName>
        <label>Date Expire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__VATAmount__c</fullName>
        <label>VAT/GST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__VATName__c</fullName>
        <label>VAT/GST Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__VATRate__c</fullName>
        <label>VAT/GST Rate (%)</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__VAT__c</fullName>
        <label>VAT/GST</label>
        <referenceTo>kugo2p__VAT__c</referenceTo>
        <relationshipLabel>VAT/GST Rates</relationshipLabel>
        <relationshipName>VAT_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>VAT/GST Rate</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>VAT/GST Rate Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VAT/GST Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>kugo2p__Date_Effective_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( kugo2p__DateEffective__c )</errorConditionFormula>
        <errorDisplayField>kugo2p__DateEffective__c</errorDisplayField>
        <errorMessage>Date Effective is required.</errorMessage>
    </validationRules>
</CustomObject>